Sun Jan 30 01:02:28 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* include/ruby/ruby.h: Added NUM2MODET() and MODET2NUM() default definition.
	  Because r30686 introduced win32 build failure.

Sat Jan 29 22:16:26 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* array.c (rb_ary_join): [].join.encoding must be US-ASCII.
	  [ruby-list:47790]

Sat Jan 29 20:22:39 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* benchmark/driver.rb (BenchmarkDriver#measure): Show command line
	  when abnormal exiting occur.

Sat Jan 29 10:53:16 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* vm_insnhelper.c (vm_get_ev_const): no-scope reference to toplevel
	  private constant has been prohibited incorrectly.

	* test/ruby/test_module.rb (test_toplevel_private_constant): add a
	  test for above.

Sat Jan 29 08:43:23 2011  Ryan Davis  <ryand-ruby@zenspider.com>

	* lib/rubygems*: Import rubygems 1.5.0 (release candidate @ 09893d9)
	* test/rubygems: Ditto

Sat Jan 29 02:02:37 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* variable.c (rb_mod_const_of, sv_i): Module#constant should exclude
	  private constants.  see [ruby-core:32912].

	* test/ruby/test_module.rb (test_constants_with_private_constant): add
	  a test for above.

Sat Jan 29 01:36:41 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* variable.c (rb_const_set): const_set shoud preserve constant
	  visibility.  see [ruby-core:32912].

	* test/ruby/test_module.rb: add a test for above.

Sat Jan 29 01:24:57 2011  Yusuke Endoh  <mame@tsg.ne.jp>

	* compile.c (NODE_CLASS, NODE_MODULE), insns.def (defineclass): raise
	  an exception when "class Foo::Bar" is evaluated and Foo::Bar is
	  private.  To implement this, define_type of "defineclass" is added
	  so that the instruction can distinguish whether the class definition
	  is scoped (class Foo::Bar) or not (class Bar).

	* test/ruby/test_class.rb (test_redefine_private_class),
	  test/ruby/test_module.rb
	  (test_define_module_under_private_constant): add tests for above.
