@@ -9,8 +9,14 @@ class OpenSSL::TestBN < Test::Unit::TestCase
   end
 
   def test_prime_p
-    OpenSSL::BN.new((2 ** 107 - 1).to_s(16), 16).prime?
-    OpenSSL::BN.new((2 ** 127 - 1).to_s(16), 16).prime?(1)
+    assert_equal(true, OpenSSL::BN.new((2 ** 107 - 1).to_s(16), 16).prime?)
+    assert_equal(true, OpenSSL::BN.new((2 ** 127 - 1).to_s(16), 16).prime?(1))
+  end
+
+  def test_cmp_nil
+    bn = OpenSSL::BN.new('1')
+    assert_equal(false, bn == nil)
+    assert_equal(true,  bn != nil)
   end
 end
 
